Weight paint crash when subsurf modifier is not first (master not 2.79) #53551

Closed
opened 2017-12-13 09:59:35 +01:00 by Campbell Barton · 10 comments

When there is a mirror modifier before subsurf for example, weight painting crashes, since the indices used are assumed to be aligned with the Mesh data-block.
(assumption from PBVH vertex paint merge).

Try paint on both examples in the attached file:

subsurf_crash.blend

When there is a mirror modifier before subsurf for example, weight painting crashes, since the indices used are assumed to be aligned with the `Mesh` data-block. (assumption from PBVH vertex paint merge). Try paint on both examples in the attached file: [subsurf_crash.blend](https://archive.blender.org/developer/F1388048/subsurf_crash.blend)
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton changed title from Weight paint crash when 2x subsurf modifier is not first to Weight paint crash when subsurf modifier is not first 2017-12-13 10:00:09 +01:00
Member

Added subscriber: @JohnRoper

Added subscriber: @JohnRoper
Member

Blender crashes when I try to weight paint the first example (the single cube). Blender does not crash when I try to paint the second example (the two cubes).

Blender crashes when I try to weight paint the first example (the single cube). Blender does not crash when I try to paint the second example (the two cubes).
Author
Owner

The second example crashes if you paint in some locations. It works sometimes because mirror modifier may correctly reference original vertices.

The second example crashes if you paint in some locations. It works sometimes because mirror modifier may correctly reference original vertices.

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2017-12-18 12:27:17 +01:00

@ideasman42 , if you report issue, make sure it's assigned to a maintainer. In this case regression goes to 4f616c9.

@ideasman42 , if you report issue, make sure it's assigned to a maintainer. In this case regression goes to 4f616c9.
Campbell Barton changed title from Weight paint crash when subsurf modifier is not first to Weight paint crash when subsurf modifier is not first (master not 2.79) 2018-01-17 16:10:04 +01:00
Campbell Barton removed their assignment 2018-01-17 16:13:11 +01:00
Bastien Montagne was assigned by Campbell Barton 2018-01-17 16:13:11 +01:00
Author
Owner

Added subscribers: @nathanvollmer, @mont29

Added subscribers: @nathanvollmer, @mont29
Author
Owner

@Sergey, actual code was something the @nathanvollmer & @mont29 developed.

From a quick look am not sure how to solve, besides not supporting multires and instead always weight painting on the deformed cage as 2.79 does.

Checked on using orig-index here but the data layer isn't available.

@Sergey, actual code was something the @nathanvollmer & @mont29 developed. From a quick look am not sure how to solve, besides not supporting multires and instead always weight painting on the deformed cage as 2.79 does. Checked on using orig-index here but the data layer isn't available.

This issue was referenced by ad046efa79

This issue was referenced by ad046efa7966a0d1d201ca92ad8352ccfaed2ca3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53551
No description provided.